ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

if WITH_TOFINO
EXTRA_TARGETS = targets
MAYBE_TOFINO = tofino
endif

if WITH_BMV2
MAYBE_BMV2 = bmv2
endif

if WITH_BMV2TOFINO
MAYBE_BMV2TOFINO = bmv2-tofino
endif

if WITH_SWITCHAPI
MAYBE_SWITCHAPI = switchapi
endif

if WITH_SWITCHSAI
MAYBE_SWITCHSAI = switchsai
endif

SUBDIRS = \
p4-build \
$(MAYBE_SWITCHAPI) $(MAYBE_SWITCHSAI) \
$(MAYBE_BMV2) \
$(MAYBE_BMV2TOFINO) \
$(MAYBE_TOFINO) $(EXTRA_TARGETS) \
doc
